<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_item_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ItemViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/ToolbarActionButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/back_btn_description"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/activity_title"
            style="@style/ViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/daily_planning_btn"
            android:layout_width="24dp"
            android:layout_height="28dp"
            android:layout_marginEnd="9dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/calendar_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/itemview_tag_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/itemview_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@android:drawable/stat_notify_more"
            style="@style/ToolbarActionButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_itemview_itemlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:divider="@null"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:listitem="@layout/parent_recycler_view_task_item"
        tools:visibility="visible">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageButton
        android:id="@+id/remove_done_tasks_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/bin_btn_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_delete_24_icon"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        style="@style/BigInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/new_task_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/nunitosans_semibold"
            android:hint="@string/task_creation_placeholder"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/new_task_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/new_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_bg"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/new_task"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plus_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_update_task"
        style="@style/TaskUpdateLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner_just_top_bg"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/layout_update_task_checkbox"
                    style="@style/TaskEntryCheckbox"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/layout_update_task_body"
                    style="@style/TaskEntryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/task_edit_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/locationReminderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/date_reminder"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/layout_update_task_export_calendar"
                    style="@style/BorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:icon="@drawable/calendar_icon"
                    app:iconGravity="textStart"
                    app:iconTint="@color/dark_grey"
                    android:text="@string/export_to_calendar" />

                <Button
                    android:id="@+id/layout_update_remove_due_date"
                    style="@style/BorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:icon="@drawable/ic_baseline_delete_24_icon"
                    app:iconSize="25dp"
                    app:iconTint="@color/dark_grey"
                    app:iconPadding="0dp"
                    app:iconGravity="textStart"
                    android:text="@string/remove_due_date" />

                <TextView
                    android:id="@+id/LocationReminderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/location_reminder"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/AddLocationReminderButton"
                    style="@style/BorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:icon="@drawable/location_icon"
                    app:iconSize="17dp"
                    app:iconTint="@color/dark_grey"
                    app:iconPadding="5dp"
                    app:iconGravity="textStart"
                    android:text="@string/add_location" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/layout_update_task_delete"
            style="@style/TaskDeleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/layout_update_task_save"
            style="@style/TaskSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/layout_update_task_delete"
            tools:layout_editor_absoluteX="24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_update_tags"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner_just_top_bg"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Button
            android:id="@+id/itemview_tag_save_button"
            style="@style/TaskSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/tags_linear_layout"
            app:layout_constraintEnd_toEndOf="@+id/tags_linear_layout"
            app:layout_constraintStart_toStartOf="@+id/tags_linear_layout" />

        <LinearLayout
            android:id="@+id/tags_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <TextView
                android:id="@+id/local_tags_title"
                style="@style/TagTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todolist_labels" />

            <HorizontalScrollView
                android:id="@+id/scroll_tags_local"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <LinearLayout
                    android:id="@+id/tag_row_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/globals_tags_title"
                style="@style/TagTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_labels" />

            <HorizontalScrollView
                android:id="@+id/scroll_tags_global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/tag_row_global"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>