<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/alert_dialog_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/title_todo"
        android:backgroundTint="@color/dark_grey"
        android:hint="@string/title_todo"
        android:inputType="text"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/custom_cursor" />

</LinearLayout>