...
    <string name="strikethrough">Strikethrough</string>
    <string name="blockquote">Blockquote</string>
    <string name="unordered_list">Unordered list</string>
    <string name="insert_image">Insert image</string>
    <string name="ordered_list">Ordered list</string>
    <string name="add_drawing">Add drawing</string>
    <string name="add_tag_suggestion">\"Enter tag name\"</string>

    <!-- Notification Reminder -->
    <string name="title_date_reminder">The due date has come !</string>
    <string name="content_date_reminder">taskDescriptionDateReminder</string>
    <string name="channel_date_name">ReminderDateChannel</string>
    <string name="title_location_reminder">Location reminder !</string>
...
